--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+
+	<head>
+		<title>Sign in</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!--===============================================================================================-->
+		<link rel="stylesheet" type="text/css" href="css/util.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<!--===============================================================================================-->
+	</head>
+
+	<body style="background-color: #999999;">
+
+		<div class="limiter">
+			<div class="container-login100">
+				<div class="login100-more" style="background-image: url('images/pexl.jpeg');"></div>
+
+				<div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
+					<form class="login100-form validate-form" action="/login_info" method="POST">
+						<span class="login100-form-title p-b-59">
+							Sign In
+						</span>
+						<% if(msg !== "none"){ %>
+						<h4 style="color:red">
+							<%= msg %>
+						</h4>
+						<% } %>
+						<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+							<span class="label-input100">Email</span>
+							<input class="input100" type="text" name="email" placeholder="Email addess...">
+							<span class="focus-input100"></span>
+						</div>
+
+						<div class="wrap-input100 validate-input" data-validate="Password is required">
+							<span class="label-input100">Password</span>
+							<input class="input100" type="password" name="pass" placeholder="*************">
+							<span class="focus-input100"></span>
+						</div>
+
+						<div class="container-login100-form-btn">
+							<div class="wrap-login100-form-btn">
+								<div class="login100-form-bgbtn"></div>
+								<button class="login100-form-btn">
+									Sign in
+								</button>
+							</div>
+
+							<a href="/sign_up" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30">
+								Sign up
+								<i class="fa fa-long-arrow-right m-l-5"></i>
+							</a>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<!--===============================================================================================-->
+		<script src="vendor/bootstrap/js/popper.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+		<script src="js/main.js"></script>
+
+	</body>
+
 </html>
